Fixed basic nav bar alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,33 +38,29 @@
 .navBar {
   width: 100%;
   height: 40px;
-  /* margin-top: -16px; */
   margin-bottom: 10px;
   background-color: #000000;
   opacity: 0.75;
-  /* display: table; */
   display: flex;
   flex-direction: row;
-  /* margin: auto; */
 }
 
-ul {
+.flexDiv {
   height: 40px;
+  margin-left: 20px;
+  display: table;
 }
 
-li {
+.linkDiv {
   width: 100px;
   height: 40px;
-  /* margin-bottom: -22px; */
-  /* display: table; */
-  display: inline-block;
+  display: table-cell;
   list-style: none;
   text-align: center;
+  vertical-align: middle;
 }
 
 a {
-  /* display: table-cell;
-  vertical-align: middle; */
   color: #FFFFFF;
   text-decoration: none;
 }
